Bug 341006 - Only show underline when Alt is pressed breaks when Alt+tabbing away and back from the window
Summary: Only show underline when Alt is pressed breaks when Alt+tabbing away and back...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-15 22:29 UTC by Albert Astals Cid
Modified: 2014-12-01 16:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2014-11-15 22:29:40 UTC
* Start an application (in my case kate based in kdelibs4)
* Alt tab away from the application
* Alt tab back to the application
* Note how the underlines are shown when they should not since i don't have Alt pressed anymore
Comment 1 David Edmundson 2014-12-01 14:42:42 UTC
Git commit 7e37ff2c43fdae279cabda42aab9c8212cfe825e by David Edmundson.
Committed on 01/12/2014 at 14:31.
Pushed by davidedmundson into branch 'Plasma/5.1'.

Remove mnemonic underlines when alt-tabbing

Alt+tab messes with the nmemonics.
In Qt5 we get a keyPressEvent, then we lose focus and don't receive a
keyReleaseEvent

This means the application keeps showing the mnemonic helpers even when
we switch back to the application.
REVIEW: 121311
FIXED-IN: 5.1.2

M  +4    -0    kstyle/breezemnemonics.cpp

http://commits.kde.org/breeze/7e37ff2c43fdae279cabda42aab9c8212cfe825e
Comment 2 David Edmundson 2014-12-01 14:44:15 UTC
Git commit e7754b107f96c216731644e0bbf4bd09e061971c by David Edmundson.
Committed on 01/12/2014 at 14:31.
Pushed by davidedmundson into branch 'master'.

Remove mnemonic underlines when alt-tabbing

Alt+tab messes with the nmemonics.
In Qt5 we get a keyPressEvent, then we lose focus and don't receive a
keyReleaseEvent

This means the application keeps showing the mnemonic helpers even when
we switch back to the application.
REVIEW: 121311
FIXED-IN: 5.1.2

M  +4    -0    kstyle/breezemnemonics.cpp

http://commits.kde.org/breeze/e7754b107f96c216731644e0bbf4bd09e061971c
Comment 3 Hugo Pereira Da Costa 2014-12-01 16:22:03 UTC
Git commit c9887b92a2bc77ab695c72a834285b8a35e1b554 by Hugo Pereira Da Costa.
Committed on 01/12/2014 at 16:21.
Pushed by hpereiradacosta into branch 'Plasma/5.1'.

Fixed KDE4 compilation

M  +2    -0    kstyle/breezemnemonics.cpp

http://commits.kde.org/breeze/c9887b92a2bc77ab695c72a834285b8a35e1b554
Comment 4 Hugo Pereira Da Costa 2014-12-01 16:29:53 UTC
Git commit aa076fd51210bc0684390d3636cd8aaa240e528c by Hugo Pereira Da Costa.
Committed on 01/12/2014 at 16:21.
Pushed by hpereiradacosta into branch 'master'.

Fixed KDE4 compilation

M  +2    -0    kstyle/breezemnemonics.cpp

http://commits.kde.org/breeze/aa076fd51210bc0684390d3636cd8aaa240e528c