Remove mnemonic underlines when alt-tabbing

Alt+tab messes with the nmemonics.
In Qt5 we get a keyPressEvent, then we lose focus and don't receive a
keyReleaseEvent

This means the application keeps showing the mnemonic helpers even when
we switch back to the application.

BUG: 341006
REVIEW: 121311
FIXED-IN: 5.1.2